openshift/base/jhipster-console/jhipster-console-deploymentconfig.yaml
apiVersion: v1
kind: DeploymentConfig
metadata:
  labels:
    com.xebialabs.service: jhipster-console
  name: jhipster-console
spec:
  replicas: 1
  selector:
    com.xebialabs.service: jhipster-console
  template:
    metadata:
      labels:
        com.xebialabs.service: jhipster-console
    spec:
      containers:
      - name: jhipster-console
        image: ' '
        ports:
          - containerPort: 5601
        restartPolicy: Always
  triggers:
  - type: ConfigChange
  - imageChangeParams:
      automatic: true
      containerNames:
      - jhipster-console
      from:
        kind: ImageStreamTag
        name: jhipster-console:v3.0.1
    type: ImageChange
