openshift/base/jhipster-console/jhipster-console-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    com.xebialabs.service: jhipster-console
  name: jhipster-console
spec:
  ports:
  - name: "http"
    port: 5601
    targetPort: 5601
  selector:
    com.xebialabs.service: jhipster-console
