openshift/base/jhipster-console/jhipster-console-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    com.xebialabs.service: jhipster-console
  name: jhipster-console
spec:
  port:
    targetPort: 'http'
  to:
    kind: Service
    name: jhipster-console
    weight: 100
  wildcardPolicy: None
